--- a/src/app/components/Chat/ChatPanel/chatPanel.module.css
+++ b/src/app/components/Chat/ChatPanel/chatPanel.module.css
@@ -14,6 +14,10 @@
 .chatPanel input {
   width: 100%;
 
+  padding-left: 10px;
+  box-sizing: border-box;
+
+  color: black;
   background-color: whitesmoke;
   border-radius: 0 0 20px 0;
 }
