--- a/src/app/components/Settings/settings.module.css
+++ b/src/app/components/Settings/settings.module.css
@@ -4,6 +4,8 @@
   flex-direction: column;
   align-items: center;
 
+  margin-right: 2px;
+
   background-color: #4768b5;
   border-radius: 20px 0 0 20px;
 }
