some style fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  background-color: whitesmoke;
+  background-color: blanchedalmond;
   color: rgb(var(--foreground-rgb));
-  padding: 10px;
+  padding: 3px;
 }
